--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
     "@types/react": "~18.3.12",
+    "axios": "^1.7.9",
     "expo": "~52.0.7",
+    "expo-checkbox": "~4.0.0",
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
