--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-picker/picker": "^2.9.0",
+    "@react-native-picker/picker": "~2.9.0",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
     "@types/react": "~18.3.12",
@@ -25,7 +25,7 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "typescript": "^5.3.3"
   },
