--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.13",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss": "3.3.5",
+    "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "zustand": "^4.4.7"
