--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "postinstall": "npx tailwindcss -i ./global.css -o ./node_modules/.cache/nativewind/global.css"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.11.2",
     "@hookform/resolvers": "^4.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/avatar": "~1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
@@ -29,14 +30,15 @@
     "@supabase/supabase-js": "^2.49.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "expo": "^52.0.25",
+    "expo": "^52.0.41",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
-    "expo-router": "~4.0.16",
+    "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
+    "lightningcss-darwin-arm64": "^1.29.3",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
