--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@hookform/resolvers": "^4.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.3",
+    "@react-navigation/stack": "^7.2.3",
     "@rn-primitives/avatar": "~1.1.0",
     "@rn-primitives/checkbox": "^1.1.0",
     "@rn-primitives/portal": "~1.1.0",
@@ -34,11 +37,10 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
-    "expo-router": "^4.0.19",
-    "expo-splash-screen": "~0.29.20",
+    "expo-router": "~4.0.19",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
-    "lightningcss-darwin-arm64": "^1.29.3",
     "lucide-react-native": "^0.378.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
