--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@rn-primitives/types": "~1.1.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "@supabase/supabase-js": "^2.49.1",
+    "@vis.gl/react-google-maps": "^1.5.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.7",
