--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.7",
     "expo": "^52.0.25",
+    "expo-camera": "^16.0.18",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
     "expo-navigation-bar": "~4.0.7",
