--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo": "^52.0.25",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-location": "~18.0.10",
     "expo-navigation-bar": "~4.0.7",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
@@ -47,6 +48,8 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-paper": "^5.13.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
