--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-maps": "^1.20.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.12.0",
